basic grid layout

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,9 @@
 @import "fonts";
 @import "typography";
 
+@import 'layout';
+
+/*
 @import "sidebar";
 @import "header";
 @import "realtors";
@@ -11,3 +14,4 @@
 @import "homes";
 @import "gallery";
 @import "footer";
+*/
