--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,6 +2,43 @@
 @import 'variables';
 
 .footer{
-  background-color: $color-grey-dark-1;
+  background-color: $color-secondary;
   grid-column: sidebar-start / full-end;
+  padding: 5rem;
+}
+
+.nav{
+  list-style: none;
+
+  display: grid;
+  //calculate number of colums
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  //add gaps between elements not
+  grid-gap: 2rem;
+  align-items: center;
+
+  &-link:link,
+  &-link:visited{
+    display: block;
+    font-size: 1rem;
+    text-decoration: none;
+    font-family: $font-display;
+    text-transform: uppercase;
+    text-align: center;
+    transition: all 1s;
+    color: $color-grey-light-2;
+  }
+
+  &-item:hover,
+  &-link:active{
+    //background-color: rgba(#fff,.05);
+    transform: translateY(-3px);
+  }
+}
+
+.copyright{
+  color: $color-grey-light-2;
+  width: 50%;
+  margin: 3rem auto 0 auto;
+  padding: 1rem;
 }
