--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -7,5 +7,31 @@
   grid-column: sidebar-start / sidebar-end;
   //use all rows
   grid-row: 1 / -1;
+
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.nav-btn{
+  border:none;
+  border-radius: 2px;
+
+  background-color: $color-grey-light-1;
+  height: 2px;
+  width: 3rem;
+
+  &::before,
+  &::after{
+    content: "";
+    background-color: $color-grey-light-1;
+    height: 2px;
+    width: 3rem;
+    display: block;
+  }
+
+  &::before{ transform: translateY(-1rem)};
+  &::after{ transform: translateY(1rem)};
+
+}
