--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -3,7 +3,7 @@
 
 .footer{
   background-color: $color-secondary;
-  grid-column: sidebar-start / full-end;
+  grid-column: full-start / full-end;
   padding: 5rem;
 }
 
