--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,3 +13,18 @@ $color-grey-dark-2: #6D5D4B;
 // FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
+
+
+//MEDIA query variables
+//RESPONSIVE brekpoints
+
+//1280px / 16
+$screen-lg: 80em;
+
+//1024px / 16
+$screen-md: 64em;
+
+//800px / 16
+$screen-sm: 50em;
+
+$screen-xs: 80em;
