--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,79 @@
 @import 'variables';
 
 .header{
-  background-color: $color-primary-dark;
-  grid-column: full-start / col-end 6; 
+  background-color: $color-grey-dark-1;
+  //place header at grid position
+  //span between full-start and col-end 6
+  grid-column: full-start / col-end 6;
+  padding: 2rem;
+  //place background image
+  background-image: linear-gradient(
+    rgba($color-secondary,.90),rgba($color-secondary,.90)),
+    url('../../assets/img/back.jpg');
+  background-position: center;
+  background-size: cover;
+
+  display: grid;
+  grid-template-rows: 1fr min-content minmax(6rem,min-content) 1fr;
+  //alow grid to resize
+  grid-template-columns: minmax(min-content, max-content);
+  grid-row-gap: 1.5rem;
+  justify-content: center;
+
+  //change grid layout for =< 800px
+  @media only screen and (max-width: $screen-sm){
+    //span header to ocupy all columns (full width)
+    //grid-column: full-start / full-end;
+    //it can be noted also as
+    grid-column: 1 / -1;
+  }
+
+
+  &-logo{
+    height: 3rem;
+    //align logo horiontal center
+    justify-self: center;
+  }
+
+  &-button{
+    align-self: start;
+    justify-self: start;
+  }
+
+  &-seenon-text{
+    //note! event text and pseudo elements 
+    //can be treated as grid items
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    grid-column-gap: 1rem;
+    align-items: center;
+
+    &::before,
+    &::after{
+      content:"";
+      display: block;
+      height: 1px;
+      //folow the color of parent element
+      background-color: currentColor;
+    }
+  }
+
+  &-seenon-logos{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    //grid-column-gap: 2rem;
+    justify-items: center;
+    //center on smaller screens
+    align-items: center;
+    
+    img{
+      //to let these scale on smaller screen
+      max-height: 2rem;
+      //to scale 
+      max-width: 100%;
+      //add darker 'effect'
+      filter: brightness(70%);
+    }
+  }
+
 }
