--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -12,6 +12,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  //change sidebar grid layout for tablets
+  @media only screen and (max-width: $screen-md){
+    //sidebar at the top all width
+    grid-column: 1 / -1;
+    //at fist row 
+    grid-row: 1 / 2;
+    
+    justify-content: center;
+    align-items: flex-end;
+  }
+
 }
 
 .nav-btn{
@@ -34,4 +46,10 @@
   &::before{ transform: translateY(-1rem)};
   &::after{ transform: translateY(1rem)};
 
+  //change sidebar grid layout for tablets
+  @media only screen and (max-width: $screen-md){
+    margin-top: 0;
+    margin-right: 2rem;
+
+  }
 }
