--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -8,6 +8,9 @@
 
 .h-1{
   @include head-defaults();
+  font-size: 4rem;
+  color: $color-grey-light-1;
+  line-height: 1;
 }
 .h-2{
   @include head-defaults();
