--- a/src/scss/_homes.scss
+++ b/src/scss/_homes.scss
@@ -1,7 +1,111 @@
 @import 'variables';
 
 .homes{
-  background-color: $color-primary-dark;
-
+  //background-color: $color-primary-dark;
   grid-column: center-start / center-end;
+  margin: 7rem 0;
+
+  //responsive layout using grid only
+  //no media-queries needed
+  display: grid;
+  //auto create number of columns that fits minmax defintion
+  //each columns should be at least 25rem (25x16) 
+  //and each column should expand equaly when there is more space
+  //when space is below minimum grid will move items into next row
+  //so the rows will be automatically added too
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); 
+  //define (inner) gap/gutter/space between grid items
+  //note! gap does not include outer padding on the items
+  grid-gap: 5rem;
+}
+
+
+.home{
+  background-color: $color-grey-light-1;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3rem;
+
+  &-img{
+    width: 100%;
+    //to place this item at same cell with another element
+    //we need to specify both col and row location
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    //image goes behind
+    z-index: 0;
+  }
+
+  &-like{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    justify-self: end;
+
+    margin: 1rem;
+    fill: $color-primary;
+    height: 3rem;
+    width: 3rem;
+    //place icon on the top
+    z-index: 1;
+  }
+
+  &-name{
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+    justify-self: center;
+    //set to bottom, default will stretch it
+    align-self: end;
+    
+    width: 80%;
+    //move down for 50% of its height
+    //this creates effect that block is at the middle
+    //between picture and next block
+    transform: translateY(50%);
+
+    padding: 1rem;
+    font-family: $font-display;
+    font-size: 1.5rem;
+    text-align: center;
+    background-color: $color-secondary;
+    color: $color-grey-light-1;
+    font-weight: 400;
+    z-index: 2;
+  }
+
+  &-location,
+  &-rooms,
+  &-area,
+  &-price{
+
+    font-size: 1.5rem;
+    padding: 1rem;
+
+    display: flex;
+    align-items:  center;
+    //justify-content: center;
+
+    svg{
+      fill: $color-primary;
+      height: 2rem;
+      width: 2rem;
+      margin: 0 1.5rem;
+    }
+
+    p{
+
+    }
+  }
+
+  &-location,
+  &-rooms{
+    //correct for title moved down between columns
+    margin-top: 2rem;
+  }
+  
+
+  &-btn{
+    grid-column: 1 / -1;
+  }
+
 }
