--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -4,28 +4,62 @@
 .story{
   //no code here (no story element)
   &-pictures{
-    background-color: $color-primary; 
+    //background-color: $color-primary; 
     grid-column: full-start / col-end 4;
+    //on small screens < 800px
+    @media only screen and (max-width:$screen-sm){
+      //expand to 100% width
+      grid-column: 1 / -1;
+    }
+    background-image: 
+      linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)),
+      //,
+      url('../../assets/img/back.jpg');
+
+    background-size: cover;
 
     display: grid;
     //note! when cols and rows are defined
     //images are automarically placed in the cells
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
+    align-items: center;
   }
 
   &-pic-0{
     width: 100%;
-    grid-row: 2 / 6;
-    grid-column: 2 / 6;
+    grid-row: 2 / 7;
+    grid-column: 1/ 6;
+    padding: 2rem;
+
+    @media only screen and (max-width:$screen-sm){
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;  
+      opacity: 0.9;
+    }
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
   }
   &-pic-1{
     width: 100%;
+    grid-row: 1 / 4;
+    grid-column: 4 / 7;
+
+    @media only screen and (max-width:$screen-sm){
+      transform: scale(0.8);
+    }
+    transform: scale(1.2);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
   }
 
   &-content{
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+
+    @media only screen and (max-width:$screen-sm){
+      grid-column: 1 / -1;
+      //place this parte before picture
+      grid-row: 5 / 6;
+    }
     //we use vw for vertical padding
     //which reacts to viewport and resizes
     padding: 4rem 6vw;
