--- a/src/scss/_gallery.scss
+++ b/src/scss/_gallery.scss
@@ -3,4 +3,84 @@
 .gallery{
   background-color: $color-grey-light-1;
   grid-column: full-start / full-end;
+
+  margin: 0.5rem;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  //we use vw here because it scales with screen width!
+  grid-template-rows: repeat(12, 5vw);
+  grid-gap: 0.5rem;
+
+
+  &-img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &-img:nth-child(1){
+    grid-column: 1 / 6;
+    grid-row: 1 / 5;
+    //height: 3rem;
+  }
+
+  &-img:nth-child(2){
+    grid-column: 6 / 10;
+    grid-row: 1 / 4;
+  }
+
+  &-img:nth-child(3){
+    grid-column: 10 / 13;
+    grid-row: 1 / 4;
+  }
+
+  &-img:nth-child(4){
+    grid-column: 4 / 10;
+    grid-row: 6 / 13;
+  }
+
+  &-img:nth-child(5){
+    grid-column: 1 / 4;
+    grid-row: 5 / 8;
+  }
+
+  &-img:nth-child(6){
+    grid-column: 10 / 13;
+    grid-row: 4 / 8;
+  }
+
+  &-img:nth-child(7){
+    grid-column: 6 / 10;
+    grid-row: 4 / 6;
+  }
+
+  &-img:nth-child(8){
+    grid-column: 4 / 6;
+    grid-row: 5 / 6;
+  }
+
+  &-img:nth-child(9){
+    grid-column: 1 / 4;
+    grid-row: 8 / 13;
+  }
+
+  &-img:nth-child(10){
+    grid-column: 6 / 10;
+    grid-row: 1 / 4;
+  }
+
+  &-img:nth-child(11){
+    grid-column: 10 / 13;
+    grid-row: 8 / 11;
+  }
+
+  &-img:nth-child(12){
+    grid-column: 10 / 12;
+    grid-row: 11 / 13;
+  }
+
+  //last two images are places
+  //at bottom right corner automatically
 }
