--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,14 @@ $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
 
+//box shadows
+$box-shadow-color: rgba(0,0,0,.2);
+$box-shadow-xs: 0 0.1rem 0.5rem $box-shadow-color;
+$box-shadow-sm: 0 0.2rem 1rem $box-shadow-color;
+$box-shadow-md: 0 1rem 4rem $box-shadow-color;
+$box-shadow-lg: 0 2rem 8rem $box-shadow-color;
+
+
 //MEDIA query variables
 //RESPONSIVE brekpoints
 
